--- a/package.xml
+++ b/package.xml
@@ -53,6 +53,7 @@
   <build_depend>wgs84_ned_lib</build_depend>
   <build_depend>geographic_msgs</build_depend>
   <build_depend>lrs_msgs_common</build_depend>
+  <build_depend>sbox_msgs</build_depend>
   
   <run_depend>roscpp</run_depend>
   <run_depend>lrs_srvs_tst</run_depend>
